Fix horizontal scroll issue

--- a/src/app/content/components/hot-sale/hot-sale.component.scss
+++ b/src/app/content/components/hot-sale/hot-sale.component.scss
@@ -2,3 +2,8 @@
   padding: 0 4px;
   overflow-y: hidden;
 }
+
+.hot-sale-item {
+  max-width: 400px;
+  margin-bottom: 20px;
+}
